[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "index-tts-vllm"
version = "2.0.0"
description = "IndexTTS v2 inference service with vLLM acceleration"
readme = "README.md"
requires-python = ">=3.10, <3.14"

dependencies = [
    "vllm==0.16.0",
    "matplotlib==3.8.4",
    "omegaconf",
    "sentencepiece",
    "librosa",
    "gradio",
    "ninja",
    "modelscope",
    "munch==4.0.0",
    "loguru",
    "descript-audiotools==0.7.2",
    "protobuf>=5.29.6,!=6.30.*,!=6.31.*,!=6.32.*,!=6.33.0.*,!=6.33.1.*,!=6.33.2.*,!=6.33.3.*,!=6.33.4.*",
    "WeTextProcessing; platform_system != 'Darwin'",
    "wetext; platform_system == 'Darwin'",
]

[tool.setuptools.packages.find]
include = ["indextts*"]
